--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "express": "^4.18.1",
         "pg": "^8.7.3",
         "postgres": "^3.2.4",
+        "ts-node": "^10.9.1",
         "typeorm": "^0.3.7",
         "uuid": "^8.3.2"
     }
